@@ -39,7 +39,7 @@ log_level = 3;
 # you were not connected to the proxy upon connection. 
 #backlog = true;		# enable backlog
 backlog_lines = 10;		# number of lines in backlog, 0 means no limit
-always_backlog = true;		# backlog even lines already backlogged
+backlog_always = true;		# backlog even lines already backlogged
 #backlog_no_timestamp = false;  # Disables time stamps if you find them ugly.
 
 # If blreset_on_talk talking on an irc network has the same effect of issuing
@@ -50,7 +50,7 @@ always_backlog = true;		# backlog even lines already backlogged
 # If bl_msg_only is true, only channel and private messages will be backlogged
 # upon the reconnection of a client. Default is false, thus joins, parts, quits,
 # nick changes, topic changes, ... are backlogged
-#bl_msg_only = false;
+#backlog_msg_only = false;
 
 # Network definition, a name and server info
 network {
