@@ -1,3 +1,8 @@
+2007-02-17  Arnaud Cornet <arnaud.cornet@gmail.com>
+
+	* src/lex.l: Uniformize backlog options with backlog_ prefix.
+	* bip.conf.1: Update bip.conf doc.
+
 2007-01-01  Arnaud Cornet <arnaud.cornet@gmail.com>
 
 	* src/connection.c: Fix fd leak.
